Changed button names from button numbers to page numbers

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -15,9 +15,9 @@
         <Grid x:Name="Menu" HorizontalAlignment="Left" Width="150" Background="Black" Grid.ColumnSpan="2"/>
         <Frame x:Name="MainPage" Margin="29,0,0,0" NavigationUIVisibility="Hidden" Background="DimGray" Grid.Column="1" Grid.ColumnSpan="2"></Frame>
         <StackPanel HorizontalAlignment="Left" Height="400" VerticalAlignment="Center" Width="150" Grid.ColumnSpan="2" Margin="0,10,0,9">
-            <Button x:Name="button" Content="Button 1" Width="120" Click="btn_1" Height="50" Margin="8,5" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-            <Button x:Name="button1" Content="Button 2" Width="120" Click="btn_2" Height="50" Margin="8,5" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-            <Button x:Name="button2" Content="Button 3" Width="120" Click="btn_3" Height="50" Margin="8,5" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Button x:Name="button" Content="Page 1" Width="120" Click="btn_1" Height="50" Margin="8,5" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Button x:Name="button1" Content="Page 2" Width="120" Click="btn_2" Height="50" Margin="8,5" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Button x:Name="button2" Content="Page 3" Width="120" Click="btn_3" Height="50" Margin="8,5" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         </StackPanel>
         <Image x:Name="image" Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="153,188,0,0" VerticalAlignment="Top" Width="100"/>
 
